disable thermal foundation excavators for any metals with the other tools disabled

--- a/config/cofh/thermalfoundation/common.cfg
+++ b/config/cofh/thermalfoundation/common.cfg
@@ -158,7 +158,7 @@ Equipment {
         Silver {
             B:Axe=false
             B:Bow=false
-            B:Excavator=true
+            B:Excavator=false
             B:FishingRod=false
             B:Hammer=false
             B:Hoe=false
@@ -173,7 +173,7 @@ Equipment {
         Lead {
             B:Axe=false
             B:Bow=false
-            B:Excavator=true
+            B:Excavator=false
             B:FishingRod=false
             B:Hammer=false
             B:Hoe=false
@@ -188,7 +188,7 @@ Equipment {
         Aluminum {
             B:Axe=false
             B:Bow=false
-            B:Excavator=true
+            B:Excavator=false
             B:FishingRod=false
             B:Hammer=false
             B:Hoe=false
@@ -218,7 +218,7 @@ Equipment {
         Platinum {
             B:Axe=false
             B:Bow=false
-            B:Excavator=true
+            B:Excavator=false
             B:FishingRod=false
             B:Hammer=false
             B:Hoe=false
@@ -248,7 +248,7 @@ Equipment {
         Electrum {
             B:Axe=false
             B:Bow=false
-            B:Excavator=true
+            B:Excavator=false
             B:FishingRod=false
             B:Hammer=false
             B:Hoe=false
@@ -293,7 +293,7 @@ Equipment {
         Constantan {
             B:Axe=false
             B:Bow=false
-            B:Excavator=true
+            B:Excavator=false
             B:FishingRod=false
             B:Hammer=false
             B:Hoe=false
