Disabled Nuclearcraft loot via config

--- a/config/nuclearcraft.cfg
+++ b/config/nuclearcraft.cfg
@@ -902,7 +902,7 @@ other {
     B:rare_drops=false
 
     # Will NuclearCraft loot generate in chests?
-    B:dungeon_loot=true
+    B:dungeon_loot=false
 
     # Will the Wasteland Biome generate in the Overworld?
     B:wasteland_biome=true
