--- a/config/lostcities/general.cfg
+++ b/config/lostcities/general.cfg
@@ -7,15 +7,15 @@
 ##########################################################################################################
 
 general {
-    # List of other worldtypes (id) that this mod will try to work with. The worldtype has to support the IChunkPrimerFactory API for this to work [default: [Ljava.lang.String;@46ea38a0]
+    # List of other worldtypes (id) that this mod will try to work with. The worldtype has to support the IChunkPrimerFactory API for this to work [default: [Ljava.lang.String;@381eb8ee]
     S:adaptingWorldTypes <
      >
 
-    # List of additional Lost City dimensions. Format '<id>:<profile>' [default: [Ljava.lang.String;@58dc5]
+    # List of additional Lost City dimensions. Format '<id>:<profile>' [default: [Ljava.lang.String;@e7b0f2c]
     S:additionalDimensions <
      >
 
-    # List of asset libraries loaded in the specified order. If the path starts with '/' it is going to be loaded directly from the classpath. If the path starts with '$' it is loaded from the config directory [default: [Ljava.lang.String;@188f42c]
+    # List of asset libraries loaded in the specified order. If the path starts with '/' it is going to be loaded directly from the classpath. If the path starts with '$' it is loaded from the config directory [default: [Ljava.lang.String;@454e73a2]
     S:assets <
         /assets/lostcities/citydata/conditions.json
         /assets/lostcities/citydata/palette.json
@@ -30,7 +30,7 @@ general {
         $lostcities/userassets.json
      >
 
-    # List of blocks for which a lighting update is needed [default: [Ljava.lang.String;@725e991]
+    # List of blocks for which a lighting update is needed [default: [Ljava.lang.String;@395d57fb]
     S:blocksRequiringLightingUpdates <
         minecraft:glowstone
         minecraft:lit_pumpkin
@@ -52,13 +52,13 @@ general {
     # The 'profile' to use for generation of the Lost City dimension [default: default]
     S:dimensionProfile=default
 
-    # List of privatep profiles that cannot be selected by the player but are only used as a child profile of another one [default: [Ljava.lang.String;@674ed134]
+    # List of privatep profiles that cannot be selected by the player but are only used as a child profile of another one [default: [Ljava.lang.String;@418eee41]
     S:privateProfiles <
         bio_wasteland
         water_empty
      >
 
-    # List of all supported profiles (used for world creation). Warning! Make sure there is always a 'default' profile! [default: [Ljava.lang.String;@76b22c42]
+    # List of all supported profiles (used for world creation). Warning! Make sure there is always a 'default' profile! [default: [Ljava.lang.String;@4ce13e57]
     S:profiles <
         default
         cavern
