Now with 10 times less cascading worldgen lag!

--- a/config/cofh/world/config.cfg
+++ b/config/cofh/world/config.cfg
@@ -7,7 +7,7 @@ World {
     B:DisableAllGeneration=false
 
     # If TRUE, standard Minecraft ore generation will be REPLACED. Configure in the 00_minecraft.json file; standard Minecraft defaults have been provided. If you rename the 00_minecraft.json file, this option WILL NOT WORK. [default: false]
-    B:ReplaceStandardGeneration=true
+    B:ReplaceStandardGeneration=false
 
     # If TRUE, world generation handled by CoFH World will be retroactively applied to existing chunks. [default: false]
     B:RetroactiveGeneration=false
@@ -17,13 +17,13 @@ World {
 
     Bedrock {
         # If TRUE, the bedrock layer will be flattened. [default: false]
-        B:EnableFlatBedrock=true
+        B:EnableFlatBedrock=false
 
         # If TRUE, Flat Bedrock will retroactively be applied to existing chunks, if retroactive generation is enabled. [default: false]
         B:EnableRetroactiveFlatBedrock=false
 
         # This adjusts the number of layers of Flat Bedrock, if enabled. [range: 1 ~ 8, default: 2]
-        I:NumBedrockLayers=1
+        I:NumBedrockLayers=2
     }
 
 }
