--- a/config/lostcities/general.cfg
+++ b/config/lostcities/general.cfg
@@ -7,15 +7,15 @@
 ##########################################################################################################
 
 general {
-    # List of other worldtypes (id) that this mod will try to work with. The worldtype has to support the IChunkPrimerFactory API for this to work [default: [Ljava.lang.String;@58dc5]
+    # List of other worldtypes (id) that this mod will try to work with. The worldtype has to support the IChunkPrimerFactory API for this to work [default: [Ljava.lang.String;@aa1a95c]
     S:adaptingWorldTypes <
      >
 
-    # List of additional Lost City dimensions. Format '<id>:<profile>' [default: [Ljava.lang.String;@673271bb]
+    # List of additional Lost City dimensions. Format '<id>:<profile>' [default: [Ljava.lang.String;@49727212]
     S:additionalDimensions <
      >
 
-    # List of asset libraries loaded in the specified order. If the path starts with '/' it is going to be loaded directly from the classpath. If the path starts with '$' it is loaded from the config directory [default: [Ljava.lang.String;@76b22c42]
+    # List of asset libraries loaded in the specified order. If the path starts with '/' it is going to be loaded directly from the classpath. If the path starts with '$' it is loaded from the config directory [default: [Ljava.lang.String;@71464ad0]
     S:assets <
         /assets/lostcities/citydata/conditions.json
         /assets/lostcities/citydata/palette.json
@@ -30,7 +30,7 @@ general {
         $lostcities/userassets.json
      >
 
-    # List of blocks for which a lighting update is needed [default: [Ljava.lang.String;@46ea38a0]
+    # List of blocks for which a lighting update is needed [default: [Ljava.lang.String;@a7d3f71]
     S:blocksRequiringLightingUpdates <
         minecraft:glowstone
         minecraft:lit_pumpkin
@@ -52,13 +52,13 @@ general {
     # The 'profile' to use for generation of the Lost City dimension [default: default]
     S:dimensionProfile=default
 
-    # List of privatep profiles that cannot be selected by the player but are only used as a child profile of another one [default: [Ljava.lang.String;@6efd2791]
+    # List of privatep profiles that cannot be selected by the player but are only used as a child profile of another one [default: [Ljava.lang.String;@546c41a4]
     S:privateProfiles <
         bio_wasteland
         water_empty
      >
 
-    # List of all supported profiles (used for world creation). Warning! Make sure there is always a 'default' profile! [default: [Ljava.lang.String;@725e991]
+    # List of all supported profiles (used for world creation). Warning! Make sure there is always a 'default' profile! [default: [Ljava.lang.String;@2128d7d9]
     S:profiles <
         default
         cavern
