Added 16 colored ceramic frame blocks with ContentTweaker

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -512,6 +512,8 @@ crafting {
     B:techreborn.blocks.BlockRubberPlank=true
     B:techreborn.blocks.BlockStorage=true
     B:techreborn.blocks.BlockStorage2=true
+    B:tehnut.xtones.block.BlockEnum=true
+    B:tehnut.xtones.block.BlockXtone=true
     B:thaumcraft.common.blocks.basic.BlockMetalTC=true
     B:thaumcraft.common.blocks.basic.BlockPlanksTC=true
     B:thaumcraft.common.blocks.basic.BlockStonePorous=true
