--- a/config/thaumcraft_world.cfg
+++ b/config/thaumcraft_world.cfg
@@ -19,9 +19,9 @@ general {
 
     # Outer lands dimension id
     I:dimensionOuterId=-42
-    B:generateAmber=true
+    B:generateAmber=false
     B:generateAura=true
-    B:generateCinnabar=true
+    B:generateCinnabar=false
     B:generateCrystals=true
     B:generateMagicForest=true
     B:generateQuartz=true
