--- a/config/mystcraft/balance.cfg
+++ b/config/mystcraft/balance.cfg
@@ -191,6 +191,7 @@ baselining {
     I:"immersiveengineering:fluidplantoil_0"=0
     I:"immersiveengineering:molten_constantan_0"=0
     I:"immersiveengineering:molten_uranium_0"=0
+    I:"immersivepetroleum:fluid_crude_oil_0"=0
     I:"immersivepetroleum:fluid_diesel_0"=0
     I:"immersivepetroleum:fluid_gasoline_0"=0
     I:"immersivepetroleum:fluid_lubricant_0"=0
