--- a/config/buildcraft/main.cfg
+++ b/config/buildcraft/main.cfg
@@ -62,6 +62,10 @@ general {
     # Should BuildCraft miners be allowed to break blocks using player-specific protection?
     B:miningBreaksPlayerProtectedBlocks=false
 
+    # How much further down can miners (like the quarry or the mining well) dig?
+    # (Note: values above 256 only have an effect if a mod like cubic chunks is installed).
+    I:miningMaxDepth=512
+
     # How much power should be required for all mining machines?
     D:miningMultiplier=1.0
     I:pipes.baseFluidRate=10
@@ -104,11 +108,17 @@ worldgen {
     oil {
         # Can oil blocks burn?
         B:can_burn=true
+
+        # Should any oil sprouts or lakes be generated at all?
         B:enable=true
+
+        # Biome registry names (e.g. 'minecraft:ocean','minecraft:plains') of biomes that should have GREATLY increased oil generation rates.
         S:excessiveBiomes <
             buildcraftenergy:oil_desert
             buildcraftenergy:oil_ocean
          >
+
+        # Biome registry names (e.g. 'minecraft:hell','minecraft:jungle') of biomes that should never generate oil.
         S:excludedBiomes <
             minecraft:plains
             minecraft:extreme_hills
@@ -187,12 +197,24 @@ worldgen {
             thaumcraft:magical_forest
             thaumcraft:eerie
          >
+
+        # If true then the excluded biomes list will be treated as a blacklist, otherwise it will be treated as a whitelist.
+        B:excludedBiomesIsBlacklist=true
+
+        # Dimension ID's (e.g. '-1' for the nether,'1' for the end) of dimensions that should never generate oil.
         I:excludedDimensions <
             -1
             1
             43
          >
+
+        # If true then the excluded biomes list will be treated as a blacklist, otherwise it will be treated as a whitelist.
+        B:excludedDimensionsIsBlacklist=true
+
+        # The rate of occurrence of oil wells.
         D:generationRate=1.0
+
+        # Biome registry names (e.g. 'minecraft:ocean','minecraft:hills') of biomes that should have slightly increased oil generation rates.
         S:surfaceDepositBiomes <
          >
 
@@ -208,6 +230,7 @@ worldgen {
         }
 
         spouts {
+            # Whether oil spouts are generated or not. The oil spring at the bottom of large lakes will still exist.
             B:enable=true
 
             # The maximum height for large oil spouts
