Disabled Livingwood material

--- a/config/plustic.cfg
+++ b/config/plustic.cfg
@@ -45,7 +45,7 @@ materials {
     B:"Enable material iridium"=true
 
     # Set to false to prevent Livingwood from being loaded [default: true]
-    B:"Enable material livingwood_plustic"=true
+    B:"Enable material livingwood_plustic"=false
 
     # Set to false to prevent Lumium from being loaded [default: true]
     B:"Enable material lumium_plustic"=true
