Disabled Thaumium TCon material

--- a/config/plustic.cfg
+++ b/config/plustic.cfg
@@ -101,7 +101,7 @@ materials {
     B:"Enable material terrasteel"=true
 
     # Set to false to prevent Thaumium from being loaded [default: true]
-    B:"Enable material thaumium"=true
+    B:"Enable material thaumium"=false
 
     # Set to false to prevent TNT from being loaded [default: true]
     B:"Enable material tnt"=true
