--- a/config/mystcraft/balance.cfg
+++ b/config/mystcraft/balance.cfg
@@ -566,6 +566,7 @@ baselining {
     I:"pneumaticcraft:fluid.kerosene_0"=0
     I:"pneumaticcraft:fluid.lpg_0"=0
     I:"pneumaticcraft:fluid.plastic_0"=0
+    I:"powersuits:liquid_nitrogen_7"=0
     I:"railcraft:steam_7"=0
     I:"rockhounding_surface:fluid.acidic_water_0"=0
     I:"rockhounding_surface:fluid.aging_bath_0"=0
@@ -2713,6 +2714,11 @@ fluids {
     S:fluid.liquid_death.instability.factor_accessibility=
     S:fluid.liquid_death.instability.factor_flat=
     S:fluid.liquid_death.seabanned=
+    S:fluid.liquid_nitrogen.cardrank=
+    S:fluid.liquid_nitrogen.grammar=
+    S:fluid.liquid_nitrogen.instability.factor_accessibility=
+    S:fluid.liquid_nitrogen.instability.factor_flat=
+    S:fluid.liquid_nitrogen.seabanned=
     S:fluid.liquidhelium.cardrank=
     S:fluid.liquidhelium.grammar=
     S:fluid.liquidhelium.instability.factor_accessibility=
