Removed Grappling Hook

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -141,6 +141,11 @@ crafting {
     B:cofh.thermalfoundation.block.BlockStorage=true
     B:cofh.thermalfoundation.block.BlockStorageAlloy=true
     B:cofh.thermalfoundation.block.BlockStorageResource=true
+    B:com.ancient.thaumicgadgets.blocks.BlockBase=true
+    B:com.ancient.thaumicgadgets.blocks.BlockCache=true
+    B:com.ancient.thaumicgadgets.blocks.BlockLight=true
+    B:com.ancient.thaumicgadgets.blocks.BlockSarcophagus=true
+    B:com.ancient.thaumicgadgets.blocks.BlockTeleportatorCore=true
     B:com.cout970.magneticraft.block.core.BlockBase=true
     B:com.digitalfeonix.hydrogel.block.BlockHydroGel=true
     B:com.gildedgames.aether.common.blocks.construction.BlockRockGlass=true
@@ -213,6 +218,7 @@ crafting {
     B:com.lothrazar.cyclicmagic.block.BlockSoundSuppress=true
     B:com.lothrazar.cyclicmagic.component.library.BlockLibraryController=true
     B:com.lothrazar.cyclicmagic.component.ore.BlockDimensionOre=true
+    B:com.nekokittygames.thaumictinkerer.common.blocks.BlockBlackQuartz=true
     B:com.oitsjustjose.geolosys.blocks.BlockOre=true
     B:com.oitsjustjose.geolosys.blocks.BlockOreVanilla=true
     B:com.phylogeny.extrabitmanipulation.block.BlockBodyPartTemplate=true
