--- a/config/mystcraft/balance.cfg
+++ b/config/mystcraft/balance.cfg
@@ -610,6 +610,7 @@ baselining {
     I:"tconstruct:molten_tin_0"=0
     I:"tconstruct:molten_zinc_0"=0
     I:"tconstruct:purpleslime_0"=0
+    I:"thaumadditions:crystal_water_0"=0
     I:"thaumcraft:flux_goo_7"=0
     I:"thaumcraft:liquid_death_0"=0
     I:"thaumcraft:purifying_fluid_0"=0
@@ -3360,6 +3361,11 @@ fluids {
     S:fluid.tconstruct.zinc.instability.factor_accessibility=
     S:fluid.tconstruct.zinc.instability.factor_flat=
     S:fluid.tconstruct.zinc.seabanned=
+    S:"fluid.thaumadditions:crystal_water.cardrank"=
+    S:"fluid.thaumadditions:crystal_water.grammar"=
+    S:"fluid.thaumadditions:crystal_water.instability.factor_accessibility"=
+    S:"fluid.thaumadditions:crystal_water.instability.factor_flat"=
+    S:"fluid.thaumadditions:crystal_water.seabanned"=
     S:fluid.thorium.cardrank=
     S:fluid.thorium.grammar=
     S:fluid.thorium.instability.factor_accessibility=
