--- a/config/thaumcraft_world.cfg
+++ b/config/thaumcraft_world.cfg
@@ -24,7 +24,7 @@ general {
     B:generateCinnabar=false
     B:generateCrystals=true
     B:generateMagicForest=true
-    B:generateQuartz=true
+    B:generateQuartz=false
     B:generateStructure=true
     B:generateTrees=true
 
