--- a/config/watercontrolextreme.cfg
+++ b/config/watercontrolextreme.cfg
@@ -20,8 +20,16 @@ general {
         minecraft:void
         minecraft:mutated_swampland
         traverse:green_swamp
-        traverse:temperate_rainforest
-        aether_legacy:aether_highlands
+	minecraft:frozen_ocean
+	minecraft:frozen_river
+	minecraft:ice_flats
+	minecraft:ice_mountains
+	minecraft:taiga_cold_hills
+	minecraft:mutated_taiga_cold
+	minecraft:mutated_redwood_taiga_hills
+	buildcraftenergy:oil_ocean
+	traverse:glacier
+	traverse:glacier_spikes
      >
 
     # Dimensions in which these fluids should be infinite
