Added Random PSIdeas

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -202,6 +202,7 @@ crafting {
     B:com.globbypotato.rockhounding_surface.blocks.white_sands.WhiteSand=true
     B:com.jaquadro.minecraft.storagedrawers.block.BlockTrim=true
     B:com.jaquadro.minecraft.storagedrawersextra.block.BlockTrimExtra=true
+    B:com.kamefrede.rpsideas.blocks.BlockPlate=true
     B:com.legacy.aether.blocks.BlockSunAltar=true
     B:com.legacy.aether.blocks.decorative.BlockPresent=true
     B:com.legacy.aether.blocks.decorative.BlockSkyrootBookshelf=true
