Changed wasteland dimension ID (4598 > 598)

--- a/config/nuclearcraft.cfg
+++ b/config/nuclearcraft.cfg
@@ -914,7 +914,7 @@ other {
     B:wasteland_dimension_gen=true
 
     # Set the dimension ID for the Wasteland Dimension.
-    I:wasteland_dimension=4598
+    I:wasteland_dimension=598
 
     # Glowing Mushroom spread rate.
     I:mushroom_spread_rate=16
