Disabled `allowEmissiveItems` in Forge.cfg

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -141,6 +141,8 @@ crafting {
     B:cofh.thermalfoundation.block.BlockStorage=true
     B:cofh.thermalfoundation.block.BlockStorageAlloy=true
     B:cofh.thermalfoundation.block.BlockStorageResource=true
+    B:com.Zoko061602.ThaumicRestoration.blocks.BlockBase=true
+    B:com.Zoko061602.ThaumicRestoration.blocks.BlockObsidian=true
     B:com.ancient.thaumicgadgets.blocks.BlockBase=true
     B:com.ancient.thaumicgadgets.blocks.BlockCache=true
     B:com.ancient.thaumicgadgets.blocks.BlockLight=true
