--- a/config/machinemuse/powersuits.cfg
+++ b/config/machinemuse/powersuits.cfg
@@ -122,7 +122,7 @@ general {
             B:grafter=true
             B:hazmat=true
             B:hoe=true
-            B:invisibility=true
+            B:invisibility=false
             B:ironPlating=true
             B:jetBoots=true
             B:jetpack=true
