--- a/config/randompatches.cfg
+++ b/config/randompatches.cfg
@@ -16,7 +16,7 @@ boats {
     B:preventUnderwaterBoatPassengerEjection=false
 
     # The underwater boat buoyancy.
-    # The vanilla default is -7.0E-4.
+    # The vanilla default is -0.0007.
     # Default: 0.023
     D:underwaterBoatBuoyancy=0.023
 }
@@ -54,10 +54,6 @@ client {
     # Default: false
     B:removePotionGlint=false
 
-    # Whether to allow other mods (namely RandomPortals) to replace the portal renderer.
-    # Default: true
-    B:replacePortalRenderer=true
-
     # Enables the /rpreloadclient command.
     # Default: true
     B:rpreloadclient=true
@@ -94,7 +90,7 @@ client {
 ##########################################################################################################
 
 misc {
-    # Fixes the End portal break particle textures and improves End portal rendering.
+    # Fixes the End portal and End gateway break particle textures and improves End portal rendering.
     # This only works on Minecraft 1.11 and above.
     # Default: true
     B:endPortalTweaks=true
