--- a/config/somelikeitdry.cfg
+++ b/config/somelikeitdry.cfg
@@ -20,6 +20,10 @@ general {
     # Percent chance that lake will not generate. Range 0-100
     # Default: 60
     I:skipLakeChance=60
+
+    # Percent chance that water falls (single block water sources) will not generate in caves. Range 0-100
+    # Default: 60
+    I:skipWaterFallChance=60
 }
 
 
