--- a/config/ftbutilities.cfg
+++ b/config/ftbutilities.cfg
@@ -71,8 +71,14 @@ backups {
     # Absolute path to backups folder.
     S:folder=
 
+    # Create a backup when server is stopped.
+    B:force_on_shutdown=false
+
     # Maximum total size that is allowed in backups folder. Older backups will be deleted to free space for newer ones.
     S:max_total_size=50 GB
+
+    # Only create backups when players have been online.
+    B:only_if_players_online=true
 
     # If set to true, no messages will be displayed in chat/status bar.
     B:silent=false
@@ -206,6 +212,25 @@ world {
     # FALSE
     # DEFAULT
     S:enable_pvp=TRUE
+
+    # Locked time in ticks in spawn dimension.
+    # -1 - Disabled
+    # 0 - Morning
+    # 6000 - Noon
+    # 12000 - Evening
+    # 18000 - Midnight
+    # Min: -1
+    # Max: 23999
+    I:forced_spawn_dimension_time=-1
+
+    # Locked weather type in spawn dimension.
+    # -1 - Disabled
+    # 0 - Clear
+    # 1 - Raining
+    # 2 - Thunderstorm
+    # Min: -1
+    # Max: 2
+    I:forced_spawn_dimension_weather=-1
     B:log_chunkloading=false
 
     # Max /rtp distance
