--- a/config/pregenerator/PregenConfig.cfg
+++ b/config/pregenerator/PregenConfig.cfg
@@ -40,6 +40,15 @@ info {
 }
 
 
+preview {
+    # Sets the order of the Preview Guis Dimension loading. Format: 0:1:-1
+    S:"Dimension Order"=0:-1:1
+
+    # Instead of Collecting all of the Dimensions the Preview Gui will only allow the dimensions provided by 'Dimension Order'
+    B:OrderOnly=false
+}
+
+
 retrogen {
     # List of Currently active WorldGenerators
     S:activeworldgenerators=
