Added Logistics Pipes

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -141,6 +141,16 @@ crafting {
     B:cofh.thermalfoundation.block.BlockStorage=true
     B:cofh.thermalfoundation.block.BlockStorageAlloy=true
     B:cofh.thermalfoundation.block.BlockStorageResource=true
+    B:com.Da_Technomancer.crossroads.blocks.BasicBlock=true
+    B:com.Da_Technomancer.crossroads.blocks.DetailedCrafter=true
+    B:com.Da_Technomancer.crossroads.blocks.MultiPistonBase=true
+    B:"com.Da_Technomancer.crossroads.items.itemSets.OreSetup$1"=true
+    B:"com.Da_Technomancer.crossroads.items.itemSets.OreSetup$2"=true
+    B:"com.Da_Technomancer.crossroads.items.itemSets.OreSetup$3"=true
+    B:"com.Da_Technomancer.crossroads.items.itemSets.OreSetup$4"=true
+    B:"com.Da_Technomancer.crossroads.items.itemSets.OreSetup$5"=true
+    B:"com.Da_Technomancer.crossroads.items.itemSets.OreSetup$6"=true
+    B:"com.Da_Technomancer.crossroads.items.itemSets.OreSetup$7"=true
     B:com.Zoko061602.ThaumicRestoration.blocks.BlockBase=true
     B:com.Zoko061602.ThaumicRestoration.blocks.BlockObsidian=true
     B:com.ancient.thaumicgadgets.blocks.BlockBase=true
@@ -264,6 +274,16 @@ crafting {
     B:com.wiresegal.naturalpledge.common.block.dendrics.thunder.BlockThunderLog=true
     B:com.wiresegal.naturalpledge.common.block.dendrics.thunder.BlockThunderPlanks=true
     B:com.xcompwiz.mystcraft.block.BlockCrystal=true
+    B:com.zerofall.ezstorage.block.BlockAccessTerminal=true
+    B:com.zerofall.ezstorage.block.BlockBlankBox=true
+    B:com.zerofall.ezstorage.block.BlockCondensedStorage=true
+    B:com.zerofall.ezstorage.block.BlockCraftingBox=true
+    B:com.zerofall.ezstorage.block.BlockHyperStorage=true
+    B:com.zerofall.ezstorage.block.BlockSearchBox=true
+    B:com.zerofall.ezstorage.block.BlockSortBox=true
+    B:com.zerofall.ezstorage.block.BlockStorage=true
+    B:com.zerofall.ezstorage.block.BlockSuperStorage=true
+    B:com.zerofall.ezstorage.block.BlockUltraStorage=true
     B:de.sanandrew.mods.immersivecables.block.BlockCoil=true
     B:dmfmm.catwalks.block.StairBlock=true
     B:ferro2000.immersivetech.common.blocks.stone.BlockStoneDecoration=true
@@ -302,6 +322,8 @@ crafting {
     B:lumien.randomthings.block.BlockSidedRedstone=true
     B:lumien.randomthings.block.BlockStainedBrick=true
     B:lumien.randomthings.block.BlockSuperLubricentStone=true
+    B:lykrast.prodigytech.common.block.BlockGeneric=true
+    B:lykrast.prodigytech.common.block.BlockLogGeneric=true
     B:mcjty.deepresonance.blocks.MachineFrame=true
     B:mcjty.deepresonance.blocks.ore.DenseObsidianBlock=true
     B:mcjty.deepresonance.blocks.ore.ResonatingOreBlock=true
