--- a/config/mystcraft/balance.cfg
+++ b/config/mystcraft/balance.cfg
@@ -71,6 +71,9 @@ baselining {
     I:"contenttweaker:quicklime_0"=0
     I:"contenttweaker:un_precipitated_molten_gold_0"=0
     I:"contenttweaker:unrefined_molten_iron_0"=0
+    I:"crossroads:blockdistilledwater_0"=0
+    I:"crossroads:blockliquidfat_0"=0
+    I:"crossroads:molten_copshowium_0"=0
     I:"extratrees:binnie.beer.ale_0"=0
     I:"extratrees:binnie.beer.corn_0"=0
     I:"extratrees:binnie.beer.lager_0"=0
@@ -1437,6 +1440,11 @@ fluids {
     S:fluid.copper_nak_hot.instability.factor_accessibility=
     S:fluid.copper_nak_hot.instability.factor_flat=
     S:fluid.copper_nak_hot.seabanned=
+    S:fluid.copshowium.cardrank=
+    S:fluid.copshowium.grammar=
+    S:fluid.copshowium.instability.factor_accessibility=
+    S:fluid.copshowium.instability.factor_flat=
+    S:fluid.copshowium.seabanned=
     S:fluid.corium.cardrank=
     S:fluid.corium.grammar=
     S:fluid.corium.instability.factor_accessibility=
@@ -1945,6 +1953,11 @@ fluids {
     S:fluid.dist_water.instability.factor_accessibility=
     S:fluid.dist_water.instability.factor_flat=
     S:fluid.dist_water.seabanned=
+    S:fluid.distilledwater.cardrank=
+    S:fluid.distilledwater.grammar=
+    S:fluid.distilledwater.instability.factor_accessibility=
+    S:fluid.distilledwater.instability.factor_flat=
+    S:fluid.distilledwater.seabanned=
     S:fluid.emerald.cardrank=
     S:fluid.emerald.grammar=
     S:fluid.emerald.instability.factor_accessibility=
@@ -2720,6 +2733,11 @@ fluids {
     S:fluid.liquid_nitrogen.instability.factor_accessibility=
     S:fluid.liquid_nitrogen.instability.factor_flat=
     S:fluid.liquid_nitrogen.seabanned=
+    S:fluid.liquidfat.cardrank=
+    S:fluid.liquidfat.grammar=
+    S:fluid.liquidfat.instability.factor_accessibility=
+    S:fluid.liquidfat.instability.factor_flat=
+    S:fluid.liquidfat.seabanned=
     S:fluid.liquidhelium.cardrank=
     S:fluid.liquidhelium.grammar=
     S:fluid.liquidhelium.instability.factor_accessibility=
