Disabled Crossroads copper/tin oregen

--- a/config/crossroads.cfg
+++ b/config/crossroads.cfg
@@ -55,10 +55,10 @@ misc {
 
 
 ores {
-    B:"Generate Copper Ore?"=true
-    B:"Generate Native Copper Ore?"=true
+    B:"Generate Copper Ore?"=false
+    B:"Generate Native Copper Ore?"=false
     B:"Generate Ruby Ore?"=true
-    B:"Generate Tin Ore?"=true
+    B:"Generate Tin Ore?"=false
 
     # Disabling this will make Crossroads copper/tin/bronze completely useless. The recipes will need copper/tin/bronze from other mods. Don't ask me why you'd want this.
     B:"Register OreDictionary for copper/tin/bronze? (Default true)"=true
