Disabled Tome of Aklahestry in config

--- a/config/xreliquary.cfg
+++ b/config/xreliquary.cfg
@@ -1179,7 +1179,7 @@ general {
 
     disable {
         # Disable Alkahestry tome and its and recipes
-        B:alkahestry_tome=false
+        B:alkahestry_tome=true
 
         # Disable the handgun, bullets, magazines, and gun parts
         B:handgun=false
