Fixed Crossroads gears not having recipes

--- a/config/mystcraft/balance.cfg
+++ b/config/mystcraft/balance.cfg
@@ -1,6 +1,7 @@
 # Configuration file
 
 baselining {
+    I:"aim:fluid_moltenxp_0"=0
     I:"buildcraftenergy:fluid_block_fuel_dense_heat_0_0"=0
     I:"buildcraftenergy:fluid_block_fuel_dense_heat_1_0"=0
     I:"buildcraftenergy:fluid_block_fuel_dense_heat_2_0"=0
@@ -2021,6 +2022,11 @@ fluids {
     S:fluid.flibe.instability.factor_accessibility=
     S:fluid.flibe.instability.factor_flat=
     S:fluid.flibe.seabanned=
+    S:fluid.fluid_moltenxp.cardrank=
+    S:fluid.fluid_moltenxp.grammar=
+    S:fluid.fluid_moltenxp.instability.factor_accessibility=
+    S:fluid.fluid_moltenxp.instability.factor_flat=
+    S:fluid.fluid_moltenxp.seabanned=
     S:fluid.fluids.integrateddynamics.liquidchorus.cardrank=
     S:fluid.fluids.integrateddynamics.liquidchorus.grammar=
     S:fluid.fluids.integrateddynamics.liquidchorus.instability.factor_accessibility=
