Mobs now always retaliate if attacked

--- a/config/apatheticmobs.cfg
+++ b/config/apatheticmobs.cfg
@@ -23,7 +23,7 @@ rules {
      >
 
     # if true, mobs will attack you back; if false, they will never attack you back [default: false]
-    B:revenge=false
+    B:revenge=true
 }
 
 
