Funky Locomotion no longer requires RF

--- a/config/funkylocomotion.cfg
+++ b/config/funkylocomotion.cfg
@@ -8,8 +8,8 @@ client {
 general {
     B:addFrameCopyResetRecipes=true
     B:addRecipes=true
-    I:energyPerBlock=250
-    I:maximumBlocksPushed=1024
+    I:energyPerBlock=0
+    I:maximumBlocksPushed=0
 }
 
 
