Improved Iron Jetpacks colors

--- a/config/IndustrialRenewal.cfg
+++ b/config/IndustrialRenewal.cfg
@@ -1,8 +1,14 @@
 # Configuration file
 
 options {
-    # Turn On/Off the manual item on first spawn (Default true)
+    # Turn On/Off the manual item on first spawn (Default true) (WIP not working yet)
     B:"start with manual"=true
+
+    # '0': Do damage only to monsters and only knockback players. '1': Do damage to monsters and player. '2': do only knockback to all living things. '3': do damage to all living things (Default 0)
+    I:"Electric Fence Damage Mode"=0
+
+    # The amount of damage the fence would cause (Default 2.0 '1 heart')
+    D:"Electric Fence Damage Amount"=2.0
 }
 
 
