--- a/config/mystcraft/balance.cfg
+++ b/config/mystcraft/balance.cfg
@@ -257,6 +257,7 @@ baselining {
     I:"nuclearcraft:fluid_carbon_dioxide_0"=0
     I:"nuclearcraft:fluid_carbon_monoxide_0"=0
     I:"nuclearcraft:fluid_chocolate_liquor_0"=0
+    I:"nuclearcraft:fluid_coal_0"=0
     I:"nuclearcraft:fluid_cocoa_butter_0"=0
     I:"nuclearcraft:fluid_condensate_water_0"=0
     I:"nuclearcraft:fluid_coolant_0"=0
@@ -363,6 +364,7 @@ baselining {
     I:"nuclearcraft:fluid_emerald_nak_hot_0"=0
     I:"nuclearcraft:fluid_ender_nak_0"=0
     I:"nuclearcraft:fluid_ender_nak_hot_0"=0
+    I:"nuclearcraft:fluid_ethanol_0"=0
     I:"nuclearcraft:fluid_ethene_0"=0
     I:"nuclearcraft:fluid_exhaust_steam_0"=0
     I:"nuclearcraft:fluid_ferroboron_0"=0
@@ -479,6 +481,7 @@ baselining {
     I:"nuclearcraft:fluid_manganese_dioxide_0"=0
     I:"nuclearcraft:fluid_marshmallow_0"=0
     I:"nuclearcraft:fluid_methanol_0"=0
+    I:"nuclearcraft:fluid_milk_0"=0
     I:"nuclearcraft:fluid_milk_chocolate_0"=0
     I:"nuclearcraft:fluid_nak_0"=0
     I:"nuclearcraft:fluid_nak_hot_0"=0
@@ -523,6 +526,7 @@ baselining {
     I:"nuclearcraft:fluid_sodium_0"=0
     I:"nuclearcraft:fluid_sodium_fluoride_solution_0"=0
     I:"nuclearcraft:fluid_sodium_hydroxide_solution_0"=0
+    I:"nuclearcraft:fluid_steam_0"=0
     I:"nuclearcraft:fluid_sugar_0"=0
     I:"nuclearcraft:fluid_sulfur_0"=0
     I:"nuclearcraft:fluid_sulfur_dioxide_0"=0
@@ -542,6 +546,7 @@ baselining {
     I:"nuclearcraft:fluid_tough_0"=0
     I:"nuclearcraft:fluid_tritium_0"=0
     I:"nuclearcraft:fluid_unsweetened_chocolate_0"=0
+    I:"nuclearcraft:fluid_uranium_0"=0
     I:"nuclearcraft:fluid_uranium_233_0"=0
     I:"nuclearcraft:fluid_uranium_233_fluoride_0"=0
     I:"nuclearcraft:fluid_uranium_233_fluoride_flibe_0"=0
@@ -555,6 +560,8 @@ baselining {
     I:"nuclearcraft:fluid_uranium_fluoride_flibe_0"=0
     I:"plustic:plustic.molten_alumite_0"=0
     I:"plustic:plustic.molten_elementium_0"=0
+    I:"plustic:plustic.molten_invar_0"=0
+    I:"plustic:plustic.molten_iridium_0"=0
     I:"plustic:plustic.molten_manasteel_0"=0
     I:"plustic:plustic.molten_mirion_0"=0
     I:"plustic:plustic.molten_osgloglas_0"=0
@@ -565,12 +572,16 @@ baselining {
     I:"plustic:plustic.molten_refinedobsidian_0"=0
     I:"plustic:plustic.molten_terrasteel_0"=0
     I:"plustic:plustic.molten_thaumium_0"=0
+    I:"pneumaticcraft:fluid.diesel_0"=0
     I:"pneumaticcraft:fluid.etchacid_0"=0
     I:"pneumaticcraft:fluid.fuel_0"=0
     I:"pneumaticcraft:fluid.kerosene_0"=0
     I:"pneumaticcraft:fluid.lpg_0"=0
+    I:"pneumaticcraft:fluid.lubricant_0"=0
+    I:"pneumaticcraft:fluid.oil_0"=0
     I:"pneumaticcraft:fluid.plastic_0"=0
     I:"powersuits:liquid_nitrogen_7"=0
+    I:"railcraft:creosote_0"=0
     I:"railcraft:steam_7"=0
     I:"rockhounding_surface:fluid.acidic_water_0"=0
     I:"rockhounding_surface:fluid.aging_bath_0"=0
@@ -594,7 +605,9 @@ baselining {
     I:"tconstruct:molten_copper_0"=0
     I:"tconstruct:molten_dirt_0"=0
     I:"tconstruct:molten_electrum_0"=0
+    I:"tconstruct:molten_emerald_0"=0
     I:"tconstruct:molten_enderium_0"=0
+    I:"tconstruct:molten_glass_0"=0
     I:"tconstruct:molten_gold_0"=0
     I:"tconstruct:molten_invar_0"=0
     I:"tconstruct:molten_iridium_0"=0
@@ -1406,6 +1419,11 @@ fluids {
     S:fluid.chocolate_liquor.instability.factor_accessibility=
     S:fluid.chocolate_liquor.instability.factor_flat=
     S:fluid.chocolate_liquor.seabanned=
+    S:fluid.coal.cardrank=
+    S:fluid.coal.grammar=
+    S:fluid.coal.instability.factor_accessibility=
+    S:fluid.coal.instability.factor_flat=
+    S:fluid.coal.seabanned=
     S:fluid.cocoa_butter.cardrank=
     S:fluid.cocoa_butter.grammar=
     S:fluid.cocoa_butter.instability.factor_accessibility=
@@ -2989,6 +3007,16 @@ fluids {
     S:fluid.plustic.elementium.instability.factor_accessibility=
     S:fluid.plustic.elementium.instability.factor_flat=
     S:fluid.plustic.elementium.seabanned=
+    S:fluid.plustic.invar.cardrank=
+    S:fluid.plustic.invar.grammar=
+    S:fluid.plustic.invar.instability.factor_accessibility=
+    S:fluid.plustic.invar.instability.factor_flat=
+    S:fluid.plustic.invar.seabanned=
+    S:fluid.plustic.iridium.cardrank=
+    S:fluid.plustic.iridium.grammar=
+    S:fluid.plustic.iridium.instability.factor_accessibility=
+    S:fluid.plustic.iridium.instability.factor_flat=
+    S:fluid.plustic.iridium.seabanned=
     S:fluid.plustic.manasteel.cardrank=
     S:fluid.plustic.manasteel.grammar=
     S:fluid.plustic.manasteel.instability.factor_accessibility=
@@ -3315,6 +3343,16 @@ fluids {
     S:fluid.tconstruct.electrum.instability.factor_accessibility=
     S:fluid.tconstruct.electrum.instability.factor_flat=
     S:fluid.tconstruct.electrum.seabanned=
+    S:fluid.tconstruct.emerald.cardrank=
+    S:fluid.tconstruct.emerald.grammar=
+    S:fluid.tconstruct.emerald.instability.factor_accessibility=
+    S:fluid.tconstruct.emerald.instability.factor_flat=
+    S:fluid.tconstruct.emerald.seabanned=
+    S:fluid.tconstruct.glass.cardrank=
+    S:fluid.tconstruct.glass.grammar=
+    S:fluid.tconstruct.glass.instability.factor_accessibility=
+    S:fluid.tconstruct.glass.instability.factor_flat=
+    S:fluid.tconstruct.glass.seabanned=
     S:fluid.tconstruct.gold.cardrank=
     S:fluid.tconstruct.gold.grammar=
     S:fluid.tconstruct.gold.instability.factor_accessibility=
