--- a/config/oreveins.cfg
+++ b/config/oreveins.cfg
@@ -1,7 +1,7 @@
 # Configuration file
 
 general {
-    # Enables debug commands /clearworld, /veininfo and /findveins
+    # Enables debug commands /clearworld, /veininfo, /reloadveins and /findveins
     B:DEBUG_COMMANDS=true
 
     # If you notice that your veins (especially large ones) are being cut off at chunk boundaries, then try increasing this value. Warning: it will have an impact on world generation performance, so don't go overboard.
