--- a/config/plustic.cfg
+++ b/config/plustic.cfg
@@ -109,6 +109,15 @@ materials {
 }
 
 
+modifiers {
+    # Add Simply Jetpacks as ConArm modifiers [default: true]
+    B:"Add Simply Jetpacks as ConArm modifiers"=true
+
+    # Durability bonus calculated as FUEL_CAPACITY_OF_JETPACK*this_scalar [range: 0.0 ~ 3.4028235E38, default: 1.25E-4]
+    S:"Durability bonus scalar for Simply Jetpacks modifiers"=1.25E-4
+}
+
+
 ##########################################################################################################
 # modules
 #--------------------------------------------------------------------------------------------------------#
@@ -136,6 +145,9 @@ modules {
 
     # Integrate with Botania [default: true]
     B:"Enable Botania integration"=true
+
+    # Integrate with Constructs Armory [default: true]
+    B:"Enable Constructs Armory support"=true
 
     # Integrate with Draconic Evolution [default: true]
     B:"Enable Draconic Evolution integration"=true
@@ -165,7 +177,7 @@ modules {
     # Integrate with Natura [default: true]
     B:"Enable Natura support"=true
 
-    # Integrate with Project Red-Exploration [default: true]
+    # Integrate with Project Red-Core [default: true]
     B:"Enable Project Red integration"=true
 
     # Integrate with ProjectE [default: true]
@@ -220,13 +232,13 @@ tweaks {
     # Otherwise: do *not* load the Botania module for PlusTiC, overriding other settings. [default: true]
     B:"Force out Natural Pledge TiC materials"=true
 
-    # Valid ore dictionary values for Fruit Salad [default: [Ljava.lang.String;@593ab81b]
+    # Valid ore dictionary values for Fruit Salad [default: [Ljava.lang.String;@6a4175fa]
     S:"Fruits oredict list" <
         cropApple
         listAllfruit
      >
 
-    # Enter in the format "modid:name;meta" (leave meta blank for zero metadata) [default: [Ljava.lang.String;@79a4a0fb]
+    # Enter in the format "modid:name;meta" (leave meta blank for zero metadata) [default: [Ljava.lang.String;@f5eabc0]
     S:"Fruits stack list" <
         apple
         golden_apple;32767
@@ -240,7 +252,7 @@ tweaks {
     I:"Modifier values for Botanical" <
      >
 
-    # Objects that the Trash modifier will generate; enter in the format "weight|modid:name;meta" (leave meta blank for zero metadata) [default: [Ljava.lang.String;@1a937ede]
+    # Objects that the Trash modifier will generate; enter in the format "weight|modid:name;meta" (leave meta blank for zero metadata) [default: [Ljava.lang.String;@1bc300a1]
     S:"Trash generation" <
         20|coal
         5|slime_ball
