--- a/config/randompatches.cfg
+++ b/config/randompatches.cfg
@@ -7,7 +7,8 @@
 ##########################################################################################################
 
 boats {
-    # Whether to apply EntityBoat.
+    # Whether to patch EntityBoat.
+    # This only works on 1.9 and above.
     # Default: true
     B:patchEntityBoat=true
 
@@ -15,7 +16,7 @@ boats {
     # Default: false
     B:preventUnderwaterBoatPassengerEjection=false
 
-    # The underwater boat buoyancy.
+    # The buoyancy of boats when they are under flowing water.
     # The vanilla default is -0.0007.
     # Default: 0.023
     D:underwaterBoatBuoyancy=0.023
@@ -96,6 +97,7 @@ misc {
     B:endPortalTweaks=true
 
     # Fixes MC-2025.
+    # This only works on 1.10 and above.
     # More information can be found here: https://www.reddit.com/r/Mojira/comments/8pgd4q/final_and_proper_fix_to_mc2025_simple_reliable/
     # Default: true
     B:mc2025Fix=true
@@ -105,21 +107,33 @@ misc {
     B:minecartAIFix=true
 
     # Set this to false to disable the NetHandlerPlayServer patches (the speed limits and disconnect timeouts).
-    # On Minecraft 1.8, 1.8.8 and 1.8.9, these patches are always disabled.
+    # On 1.8, 1.8.8 and 1.8.9, these patches are always disabled.
     # Default: true
     B:patchNetHandlerPlayServer=true
+
+    # Fixes MC-11944, which allows players to replace End portals, End gateways and Nether portals using buckets.
+    # Default: true
+    B:portalBucketReplacementFix=true
 
     # Fixes MC-129057, which prevents ingredients with NBT data from being transferred to the crafting grid when a recipe is clicked in the recipe book.
     # Default: true
     B:recipeBookNBTFix=true
 
-    # Whether to allow other mods (namely RandomPortals) to replace the default Teleporter.
+    # Whether to allow other mods (namely RandomPortals) to replace the default Teleporter on 1.12.
     # Default: true
     B:replaceTeleporter=true
 
     # Enables the /rpreload command.
     # Default: true
     B:rpreload=true
+
+    # Fixes player skull stacking.
+    # Default: true
+    B:skullStackingFix=true
+
+    # Whether skull stacking requires the same textures or just the same player profile.
+    # Default: true
+    B:skullStackingRequiresSameTextures=true
 }
 
 
@@ -179,6 +193,7 @@ timeouts {
     # The read timeout.
     # This is the time it takes for a player to be disconnected after not responding to a KeepAlive packet.
     # This value is automatically rounded up to a product of keepAlivePacketInterval.
+    # This only works on 1.12 and above.
     # Min: 1
     # Max: 2147483647
     # Default: 90
