Disabled frame teleporter

--- a/config/tips.cfg
+++ b/config/tips.cfg
@@ -2,7 +2,7 @@
 
 general {
     # Determines whether or not the default tips should be possible. This includes tips added directly by other mods through their language files. [default: true]
-    B:allowDefaultTips=true
+    B:allowDefaultTips=false
 
     # A list of custom tips added by the user or modpack. [default: [Ljava.lang.String;@194a6d5f]
     S:customTips <
