Spectre coils no longer generate RF

--- a/config/tips.cfg
+++ b/config/tips.cfg
@@ -50,6 +50,8 @@ Forestry's mail system can be used to send items to other players, and even set 
 The Universal Guide contains a Forge Lexicon, which can convert items like copper ingots into variants from other mods.
 Immersive Engineering's capacitor backpack can charge tools with RF. It can be worn on your back or in a bauble slot.
 Magic Bees' hives can be found deep underground in the overworld surrounded by glowstone blocks, redstone blocks or endstone.
+Advanced Inventory Monitors can teleport food directly into your stomach.
+Factory Tech adds machines that upgrade speed, efficiency, consistency or range - but you can only add one per machine.
      >
 
     # The color of the actual tip text. [default: FFFFFF]
