--- a/config/forestry/apiculture.cfg
+++ b/config/forestry/apiculture.cfg
@@ -20,7 +20,8 @@ beekeeping {
     I:ticks.work=550
 
     hivedamage {
-        # The bees only attack the player if he starts to destroy the hive. [default: false]
+        # The bees only attack the player if he starts to destroy the hive. [default: true]
+        B:onlyAfterAttack=true
         B:onlyOnAttack=false
 
         # Whether bees can damage other entities than the player. [default: false]
@@ -37,7 +38,7 @@ beekeeping {
 
 
 species {
-    # Add species to blacklist identified by their uid, one per line. [default: [Ljava.lang.String;@592b2228]
+    # Add species to blacklist identified by their uid, one per line. [default: ]
     S:blacklist <
      >
 }
