--- a/config/AppliedEnergistics2/AppliedEnergistics2.cfg
+++ b/config/AppliedEnergistics2/AppliedEnergistics2.cfg
@@ -81,6 +81,12 @@ craftingcpu {
 }
 
 
+##########################################################################################################
+# features
+#--------------------------------------------------------------------------------------------------------#
+# Warning: Disabling a feature may disable other features depending on it.
+##########################################################################################################
+
 features {
 
     world {
@@ -90,6 +96,9 @@ features {
         B:Charger=true
         B:ChestLoot=true
         B:CrystalGrowthAccelerator=true
+
+        # Blocks that are not used in any essential recipes, also slabs and stairs.
+        B:DecorativeBlocks=true
         B:DecorativeLights=true
         B:DecorativeQuartzBlocks=true
         B:Flour=true
@@ -138,6 +147,14 @@ features {
         B:CableAnchor=true
         B:CraftingTerminal=true
         B:ExportBus=true
+        B:FluidAnnihilationPlane=true
+        B:FluidExportBus=true
+        B:FluidFormationPlane=true
+        B:FluidImportBus=true
+        B:FluidInterface=true
+        B:FluidLevelEmitter=true
+        B:FluidStorageBus=true
+        B:FluidTerminal=true
         B:FormationPlane=true
         B:IdentityAnnihilationPlane=true
         B:ImportBus=true
@@ -172,11 +189,13 @@ features {
 
     cables {
         B:CoveredCables=true
+        B:DenseCables=true
         B:GlassCables=true
         B:SmartCables=true
     }
 
     energy {
+        B:DenseEnergyCells=true
         B:EnergyAcceptor=true
         B:EnergyCells=true
     }
@@ -263,11 +282,29 @@ features {
         B:PrintedCircuits=true
         B:Processors=true
         B:PureCrystals=true
+        B:QuartzGlass=true
         B:Silicon=true
+        B:SkyStone=true
     }
 
     commands {
         B:ChunkLoggerTrace=false
+    }
+
+    machines {
+        B:Charger=true
+        B:CrystalGrowthAccelerator=true
+        B:GrindStone=true
+        B:Inscriber=true
+        B:VibrationChamber=true
+    }
+
+    craftingcomponents {
+        B:Cores=true
+        B:MatterBall=true
+        B:Presses=true
+        B:PrintedCircuits=true
+        B:Processors=true
     }
 
 }
@@ -339,22 +376,10 @@ modintegration {
 }
 
 
-##########################################################################################################
-# orecamouflage
-#--------------------------------------------------------------------------------------------------------#
-# AE2 Automatically uses alternative ores present in your instance of MC to blend better with its surroundings, if you prefer you can disable this selectively using these flags; Its important to note, that some if these items even if enabled may not be craftable in game because other items are overriding their recipes.
-##########################################################################################################
-
 orecamouflage {
     B:ENDER_DUST=true
-
-    # OreDictionary Names: dustGold
     B:GOLD_DUST=true
-
-    # OreDictionary Names: dustIron
     B:IRON_DUST=true
-
-    # OreDictionary Names: dustNetherQuartz
     B:NETHER_QUARTZ_DUST=true
 }
 
@@ -387,6 +412,12 @@ tickrates {
     I:Charger.min=10
     I:ExportBus.max=60
     I:ExportBus.min=5
+    I:FluidExportBus.max=60
+    I:FluidExportBus.min=5
+    I:FluidImportBus.max=40
+    I:FluidImportBus.min=5
+    I:FluidStorageBus.max=60
+    I:FluidStorageBus.min=5
     I:IOPort.max=5
     I:IOPort.min=1
     I:ImportBus.max=40
