--- a/config/forestry/crates.cfg
+++ b/config/forestry/crates.cfg
@@ -5,21 +5,21 @@
 crates {
 
     items {
-        # Added items. The format is 'modid:meta:name'. For wildcard metadata the format is 'modid:name'. [default: [Ljava.lang.String;@592b2228]
+        # Added items. The format is 'modid:meta:name'. For wildcard metadata the format is 'modid:name'. [default: ]
         S:accepted <
          >
 
-        # Blacklisted items. The format is 'modid:meta:name'. For wildcard metadata the format is 'modid:name'. [default: [Ljava.lang.String;@592b2228]
+        # Blacklisted items. The format is 'modid:meta:name'. For wildcard metadata the format is 'modid:name'. [default: ]
         S:rejected <
          >
     }
 
     oredict {
-        # Added oredict. Format is 'oreDictName'. Regular expressions may also be used. See backpack config for more information. [default: [Ljava.lang.String;@592b2228]
+        # Added oredict. Format is 'oreDictName'. Regular expressions may also be used. See backpack config for more information. [default: ]
         S:accepted <
          >
 
-        # Blacklisted oredict. Format is 'oreDictName'. Regular expressions may also be used. See backpack config for more information. [default: [Ljava.lang.String;@592b2228]
+        # Blacklisted oredict. Format is 'oreDictName'. Regular expressions may also be used. See backpack config for more information. [default: ]
         S:rejected <
          >
     }
