--- a/config/integrateddynamicscompat.cfg
+++ b/config/integrateddynamicscompat.cfg
@@ -28,12 +28,13 @@ core {
 
     # Integration for Integrated Dynamics recipes.
     B:jei=true
-
-    # Integration for the Signals mod
     B:signals=true
 
     # Crystalized Menril crafting in the Casting Basin.
     B:tconstruct=true
+
+    # Thaumcraft reader.
+    B:thaumcraft=true
 
     # TOP tooltips for parts.
     B:theoneprobe=true
