--- a/config/oreexcavation.cfg
+++ b/config/oreexcavation.cfg
@@ -10,7 +10,7 @@ general {
     # Skips spawning drops in world adding them directly to your inventory [default: false]
     B:"Auto Pickup"=false
 
-    # Blocks blacklisted from being excavated [default: [Ljava.lang.String;@610a1870]
+    # Blocks blacklisted from being excavated [default: ]
     S:"Block Blacklist" <
      >
 
@@ -60,7 +60,7 @@ general {
     # Temporarily reduces excavation speed if TPS begins to slow down [default: true]
     B:"TPS Guard"=true
 
-    # Tools blacklisted from excavating [default: [Ljava.lang.String;@43c2d1]
+    # Tools blacklisted from excavating [default: ]
     S:"Tool Blacklist" <
      >
 
