--- a/config/railcraft/railcraft.cfg
+++ b/config/railcraft/railcraft.cfg
@@ -16,7 +16,7 @@ charge {
 ##########################################################################################################
 
 enchantments {
-    # Enabled enchantments. [default: [Ljava.lang.String;@2b655b2a]
+    # Enabled enchantments. [default: [wrecking], [implosion], [destruction], [smack]]
     S:enchantments <
         wrecking
         implosion
@@ -116,9 +116,10 @@ recipes {
 
         misc {
             # 
-            # set the output of the coalcoke and stick recipe for torches, setting to 0 will disable'
+            # set the output of the coal coke and stick recipe for torches, setting to 0 will disable'
             # min=0, default=8, max=32
             # 
+            I:coal_coke.torches=8
             I:coalcoke.torches=8
 
             # 
@@ -250,21 +251,11 @@ tweaks {
     blocks {
 
         cartdispenser {
-            # 
-            # set the minimum number of seconds between cart dispensing, default=0
-            # 
             I:delay=0
         }
 
         irontank {
-            # 
-            # Change to 'allow.stacking=false' to disable the stacking of Iron Tanks
-            # 
             B:allow.stacking=true
-
-            # 
-            # Allows you to set the max Iron Tank base dimension, valid values are 3, 5, 7, and 9
-            # 
             I:maxsize=9
         }
 
@@ -297,6 +288,37 @@ tweaks {
             # adjust the heat value of Fuel in a Boiler, min=0.2, default=1.0, max=10.0
             # 
             D:fuelMultiplier=1.0
+        }
+
+        cart_dispenser {
+            # 
+            # set the minimum number of seconds between cart dispensing, default=0
+            # 
+            I:delay=0
+        }
+
+        metal_tank {
+            # 
+            # Change to 'allow.stacking=false' to disable the stacking of Iron Tanks
+            # 
+            B:allow.stacking=true
+
+            # 
+            # Allows you to set how many buckets (1000 milliBuckets) of fluid each iron tank block can carry, min=1, default=16, max=1600
+            # 
+            I:capacity.per.block=16
+
+            # 
+            # Allows you to set the max Iron Tank base dimension, valid values are 3, 5, 7, and 9
+            # 
+            I:maxsize=9
+        }
+
+        water_tank {
+            # 
+            # The base rate of water in milliBuckets that can be gathered from the local environment, applied every 16 ticks to every block that can see the sky, min=0, default=4, max=1000
+            # 
+            I:environmental.generation=4
         }
 
     }
@@ -396,9 +418,25 @@ tweaks {
 
         chest {
             # 
-            # change to 'allowLiquids=true' to allow you put cans/capsules in Chest Carts
+            # change to 'allowFluidContainers=true' to allow fluid containers in Chest and Cargo Carts
             # 
+            B:allowFluidContainers=false
             B:allowLiquids=false
+
+            # These items cannot be placed in Chest or Cargo carts.
+            # Entry Format: <modId>:<itemName>[#<metadata>[-<metadata>]] || <oreTag>
+            # Regular expressions in the item name are supported. [default: [minecraft:.*_shulker_box], [minecraft:.*_bucket], [forge:bucketfilled], [ic2:.*bat((pack)|(tery))], [ic2:.*_crystal], [ic2:jetpack_electric], [ic2:energy_pack], [ic2:lappack], [ic2:te#68-75]]
+            S:cargoBlacklist <
+                minecraft:.*_shulker_box
+                minecraft:.*_bucket
+                forge:bucketfilled
+                ic2:.*bat((pack)|(tery))
+                ic2:.*_crystal
+                ic2:jetpack_electric
+                ic2:energy_pack
+                ic2:lappack
+                ic2:te#68-75
+             >
         }
 
         bore {
@@ -415,7 +453,7 @@ tweaks {
             # 
             # add block ids to 'mineableBlocks' in a common separated list to define non-vanilla blocks mineable by the tunnel bore 
             # ignored if 'tweaks.carts.bore.mineAllBlocks=true' 
-            # metadata sensitive entries can be defined in the form 'modid:blockname#metadata' 
+            # metadata sensitive entries can be defined in the form '<modId>:<blockname>[#<metadata>]' 
             # Example:mineableBlocks= { minecraft:stone, minecraft:stonebrick#3 }
             # 
             S:mineableBlocks={}
@@ -512,6 +550,9 @@ worldgen {
         # spawns near lava layer in mountains
         B:sulfur=true
 
+        # villager careers and professions
+        B:village.villager=true
+
         # village building
         B:village.workshop=true
     }
@@ -537,7 +578,7 @@ worldgen {
 ##########################################################################################################
 
 worldspikes {
-    # Controls which Worldspikes are craftable, they will still be available via Creative [default: [Ljava.lang.String;@93c6d08]
+    # Controls which Worldspikes are craftable, they will still be available via Creative [default: [standard], [personal], [passive]]
     S:craftableWorldspikes <
         standard
         personal
@@ -572,11 +613,11 @@ worldspikes {
     # the number of hours that an item will power a Worldspike or Worldspike Cart
     # this is an approximation only, actual duration is affected by number of chunks loaded and tick rate
     # if the list is empty, Worldspikes will not require fuel
-    # Entry Format: <modid>:<itemname>[#<metadata>]=<value>
+    # Entry Format: <modId>:<itemName>[#<metadata>[-<metadata>]]=<value> || <oreTag>=<value>Regular expressions in the item name are supported.
     ##########################################################################################################
 
     fuel {
-        #  [default: [Ljava.lang.String;@e7f81fa]
+        #  [default: [railcraft:dust#0=2], [minecraft:ender_pearl=4], [railcraft:dust#6=8], [railcraft:dust#7=12]]
         S:passive <
             railcraft:dust#0=2
             minecraft:ender_pearl=4
@@ -584,7 +625,7 @@ worldspikes {
             railcraft:dust#7=12
          >
 
-        #  [default: [Ljava.lang.String;@e7f81fa]
+        #  [default: [railcraft:dust#0=2], [minecraft:ender_pearl=4], [railcraft:dust#6=8], [railcraft:dust#7=12]]
         S:personal <
             railcraft:dust#0=2
             minecraft:ender_pearl=4
@@ -592,7 +633,7 @@ worldspikes {
             railcraft:dust#7=12
          >
 
-        #  [default: [Ljava.lang.String;@e7f81fa]
+        #  [default: [railcraft:dust#0=2], [minecraft:ender_pearl=4], [railcraft:dust#6=8], [railcraft:dust#7=12]]
         S:standard <
             railcraft:dust#0=2
             minecraft:ender_pearl=4
