Disabled certus quartz ore generation

--- a/config/AppliedEnergistics2/AppliedEnergistics2.cfg
+++ b/config/AppliedEnergistics2/AppliedEnergistics2.cfg
@@ -90,9 +90,9 @@ craftingcpu {
 features {
 
     world {
-        B:CertusOre=true
+        B:CertusOre=false
         B:CertusQuartzWorldGen=false
-        B:ChargedCertusOre=true
+        B:ChargedCertusOre=false
         B:Charger=true
         B:ChestLoot=true
         B:CrystalGrowthAccelerator=true
